--- a/rattle.cabal
+++ b/rattle.cabal
@@ -2,7 +2,7 @@ cabal-version:      >= 1.18
 build-type:         Simple
 name:               rattle
 version:            0.2
-license:            BSD3
+-- license:         BSD3
 x-license:          BSD-3-Clause OR Apache-2.0
 license-file:       LICENSE
 category:           Development
@@ -117,6 +117,7 @@ executable rattle-benchmark
         Benchmark.Redis
         Benchmark.Intro
         Benchmark.VsMake
+        Benchmark.Util
 
 executable buildScript
     default-language: Haskell2010
